# smartwasp_android

./: .gitmodules  build.gradle  gradle.properties  mintty.exe.stackdump  sdk-release.aar  settings.gradle  smartwaspkey.jks
app/: CMakeLists.txt  build.gradle  gradle.properties  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: smartwasp_app_agreement.html  smartwasp_app_privacypolicy.html
app/src/main/jni/: decoder.c  encoder.c  profiles.c  system.c
app/src/main/jni/include/: quiet-jni.h
app/src/main/res/anim/: slide_right_in.xml  slide_right_out.xml
app/src/main/res/animator/: avd_hide_password__1.xml
app/src/main/res/color/: device_status_color.xml  device_text_color.xml  next_text_color.xml  song_text_color.xml  tab_text_color.xml
app/src/main/res/drawable/: abc_text_cursor_material.xml  avd_hide_password.xml  avd_show_password.xml  design_password_eye.xml  ios_back_drawable.xml  line_bottom.xml  line_top.xml  music_play_selector.xml  normal_status_drawable.xml  normal_status_drawable20.xml  ripple_background.xml  ripple_background_dark_round.xml  ripple_background_smartwasp_white.xml  ripple_background_transparent.xml  ripple_background_wx.xml  (+13 more)
app/src/main/res/drawable-xhdpi/: shape_badge_bg.xml  tab_dan_selector.xml  tab_dialog_selector.xml  tab_find_selector.xml  tab_mine_selector.xml  tab_skill_selector.xml  tab_smart_selector.xml
app/src/smartwasp/: agconnect-services.json
app/src/xiaodan/: agconnect-services.json
app/src/xiaodan/assets/: smartwasp_app_agreement.html  smartwasp_app_privacypolicy.html
(+237 files in other folders)
